--- a/package.json
+++ b/package.json
@@ -9,11 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.13.0",
+    "@lobehub/tts": "^1.28.3",
+    "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@types/three": "^0.174.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.174.0"
+    "react-router-dom": "^7.4.0",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "three": "^0.174.0",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "typescript": "^5",
