--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "three": "^0.174.0",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "typescript": "^5",
