--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
